# unmanned-aerial-surveillance

./: README.md
DroneAdHoc/: AdHoc.service  AdHocScript  README.txt  SetUpAdHoc
TLD/include/: central.h  quad.h  tld_utils.h
TLD/src/: Makefile  cmake_install.cmake  example  example.cpp  run_tld.cpp
UAS_tld/: Documentation.txt
UAS_tld/include/: FerNNClassifier.h  LKTracker.h  TLD.h
UAS_tld/src/: CMakeCache.txt  LKTracker.cpp  TLD.cpp  run_tld.cpp
UAVNAV/Matlab/: Guidance2D.m  Guidance3D.m
UAVNAV/include/: my_utils.h  plane.h
klt/: CMakeLists.txt  FindIPP.cmake  FindOpenCV.cmake
klt/src/: CMakeLists.txt  cameraModel.cxx  featurePool.cxx  featurePool.h  featureTrack.cxx  featureTrack.h  main_tracker.cxx  playback_tracker.cxx  playback_tracker.h
libraries/: start_Ad-hoc.sh  start_Ad-hoc.sh~
libraries/UAS_serial/: UAS_serial.cpp  UAS_serial.hpp
libraries/UAS_serial/example/: UAS_serial_example.cpp
libraries/UAS_serial/examples/: UAS_serial_example.cpp  run_UAS_serial
onr/: CMakeLists.txt
onr/MIP_SDK/: CMakeLists.txt  mip_sdk_3dm.c  mip_sdk_base.c  mip_sdk_interface.c  mip_sdk_nav.c  mip_sdk_system.c  mip_sdk_user_functions.c
onr/include/: UAS_serial.hpp  mip.h  mip_sdk.h  mip_sdk_3dm.h  mip_sdk_interface.h  mip_sdk_user_functions.h  onr.hpp
onr/include/mavlink/ardupilotmega/: mavlink_msg_vision_target_position_estimate.h  mavlink_msg_vision_target_velocity_estimate.h
onr/include/mavlink/common/: common.h  version.h
onr/src/: CMakeLists.txt  GX3_25_Test.c  UAS_serial.cpp  UAS_serial.hpp  comsys.hpp  mip_sdk_user_functions.c  onr.cpp  onr_3dm.cpp  onr_systest.cpp  sift_test.cpp  surf_test.cpp
thread/: .cproject  .project
thread/Debug/: makefile
thread/Debug/src/: subdir.mk
thread/src/: thread.cpp
tld/include/: TLD.h
tld/src/: FerNNClassifier.cpp  run_tld.cpp
uart/Debug/: makefile  sources.mk  uart
uart/Debug/src/: subdir.mk  uartTest.d
uart/Debug/src/.metadata/.plugins/org.eclipse.cdt.make.core/: specs.d  subdir.mk
uart/src/: uartTest  uartTest.cpp
uavos/: .cproject  .project  CMakeLists.txt  CMakeLists_Shubham.txt
uavos/Debug/: makefile
uavos/Debug/src/: subdir.mk
uavos/UAS_main/: CMakeLists.txt  CMakeLists_Shubham.txt  UAS_comm.cpp  UAS_nav.cpp  UAS_serial.cpp  UAS_ui.cpp  comsys.cpp  datasys.cpp  mainsys.cpp  navsys.cpp  ui.cpp  uisys.cpp  utility.cpp  visionsys.cpp
uavos/UAS_nav/: CMakeLists.txt  UAS_nav.cpp
uavos/UAS_opentld/: CMakeLists.txt  OpenTLDConfig.cmake.in
uavos/UAS_opentld/src/opentld/: CMakeLists.txt
uavos/UAS_tld/: CMakeLists.txt  FerNNClassifier.cpp  TLD.cpp  UAS_tld.cpp
uavos/UAS_tld/include/: FerNNClassifier.h  tld_utils.h
uavos/UAS_tld/src/: UAS_tld.cpp  tld_utils.cpp
uavos/include/: UAS_comm.hpp  UAS_nav.hpp  UAS_serial.hpp  UAS_ui.hpp  comsys.hpp  datasys.hpp  mainsys.hpp  navsys.hpp  sensor.hpp  uavos.hpp  ui.hpp  uisys.hpp  utility.hpp  visionsys.hpp
uavos/include/UAS_nav/: UAS_nav.hpp
uavos/include/UAS_serial/: UAS_serial.cpp  UAS_serial.hpp
uavos/include/UAS_tld/: LKTracker.h  TLD.h  UAS_tld.h
uavos/include/mavlink/ardupilotmega/: ardupilotmega.h  mavlink_msg_data16.h  mavlink_msg_data32.h  mavlink_msg_data64.h  mavlink_msg_data96.h  mavlink_msg_wind.h  testsuite.h  version.h
uavos/include/mavlink/common/: common.h  version.h
uavos/include/mavlink/uas_mavlink/: mavlink.h  mavlink_msg_mavlink_computer_mode.h  mavlink_msg_mavlink_set_computer_mode.h  mavlink_msg_mavlink_vision_set_target_box.h  mavlink_msg_mavlink_vision_target_box.h  mavlink_msg_mavlink_vision_target_position_estimate.h  mavlink_msg_mavlink_vision_target_speed_estimate.h  testsuite.h  uas_mavlink.h  version.h
uavos/src/: CMakeLists.txt  UAS_comm.cpp  comsys.cpp  mainsys.cpp  sensor.cpp  uavos.cpp  utility.cpp
